apps/tss/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tss
  namespace: tss
spec:
  selector:
    app: tss
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
